# torchL

./: README.md  cnn_1.py  cnn_2.py  cnn_3.py  cnn_4.py  cnn_5.py  cnn_6.py  cnn_7.py  cvae_1.py  cvae_2.py  environment.yml  get_gpu.py  numberPrediction.py  numpyMachine.py  rnn_1.py  rnn_lstm_1.py  rnn_lstm_2.py  rnn_lstm_3.py  rnn_lstm_4.py  rnn_lstm_5.py  test.py  test_gpu.py  torchMachine.py  vae_1.py  vae_2.py  vae_3.py  vtbackward.py  zbackward.py
3dsharp/: shapeModel.py
algorithms/: red-black-tree.py
cvae_models/: cvae10.pth  cvae101280.01.pth  cvae101280.1.pth  cvae20.pth  cvae3010240.001.pth  cvae301280.01.pth  cvae30128000.001.pth  cvae30192000.001.pth  cvae3020480.001.pth  cvae302560.01.pth  cvae30256000.001.pth  cvae30256000.008.pth  cvae30256000.01.pth  cvae30256000.012.pth  cvae30256000.018.pth  cvae30256000.02.pth  cvae30256000.0211.pth  cvae30256000.025.pth  cvae30256000.05.pth  cvae30256000.1.pth  cvae3030720.001.pth  cvae30384000.001.pth  cvae30448000.001.pth  cvae3051200.001.pth  cvae306400.001.pth  cvae3064000.001.pth  cvae3089600.001.pth  cvae3089600.0211.pth  cvae5089600.0211.pth  cvae60448000.0211.pth  cvae6089600.0211.pth  cvae61280.0001.pth  cvae61280.001.pth
data/ave/: vae.pth  vae10.pth
genMusic/: genAWavFile.py  genMusic.ipynb  librosaRead.py  madmomRead.py  processWavJson.py  processWavJson_2.py  processWavTxt.py  processWavTxt_2.py
genMusic/cpp/: CMakeLists.txt  compile_and_run.bat  compile_and_run.sh  detectChords.cpp  test-fft.c
log/: cudatraining_cvae.txt  read_madmom.txt
spleeterMusic/: SpleeterTest.py
(+11 files in other folders)
